--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 <div style="margin:20px;">
 
+<div style="float:right;">
+<a ><img src="berkeleymath.jpg" style="border:1px solid black; margin:10px;" height="200px" alt="berkeleymath"/></a>
+</div>
+
+  <div style="margin:20px;">
+
 <table>
 <tr>
 <th>Office:</th>
@@ -39,7 +45,6 @@
 </tr>
 </tbody></table>
 
-<a ><img src="berkeleymath.jpg" style="border:1px solid black; margin:10px;" height="200px" alt="berkeleymath"/></a>
 
 <div style="margin:20px;">
 
