--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div style="margin:20px;">
 
 <div style="float:right;">
-<a ><img src="berkeleymath.jpg" style="border:1px solid black; margin:10px;" height="200px" alt="berkeleymath" align=right/></a>
+<a ><img src="berkeleymath.jpg" style="border:1px solid black; margin:10px;" height="200px" alt="berkeleymath" align=middle/></a>
 </div>
 
 <div style="margin:20px;">
