--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <h3>About</h3>
 
 <p>
-I am a fourth year undergraduate Applied Mathematics major. My research interests are still
+I am a fourth year undergraduate Applied Mathematics major at UC Berkeley. My research interests are still
 being defined but at the moment I am interested in probability theory. In the past I have worked
 on problems related to algorithms and to combinatorics. Send me an email or see my CV, above, for details.
 </p>
