--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Edgar Jaramillo Rodriguez, DIMACS REU 2017</title>
+<title>Edgar Jaramillo Rodriguez</title>
 <link rel="shortcut icon" href="http://dimacs.rutgers.edu/favicon.ico" type="image/x-icon">
 <style type="text/css">
    dt { font-weight:bold; }
@@ -71,7 +71,7 @@ on problems related to algorithms and to combinatorics. Send me an email or see 
   <ul>
     <li>Instructor: <a href="https://math.berkeley.edu/~hutching/">Michael Hutchings</a></li>
     <li><a href="https://math.berkeley.edu/~hutching/teach/54-2017/">Course Website</a></li>
-    <li><a href="">Section Website</a></li>
+    <li><a href="math54.html">Section Website</a></li>
   </ul>
 </dd>
 </dl>
