--- a/math54.html
+++ b/math54.html
@@ -34,8 +34,8 @@ There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza 
 <b>How to Contact Me:</b> <br>
 Email: ejaramillo@berkeley.edu (Please include Math 54 in subject line) <br>
 Office: TBA <br>
-<b>Office Hours: Friday 1-3pm in 732 Evans. The time and day will not change
-but the room likely will once I am assigned a permanent office. </b>
+Office Hours: Friday 1-3pm in 732 Evans. The time and day will not change
+but the room likely will once I am assigned a permanent office.
 
 <hr>
 
