--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ on problems related to algorithms and to combinatorics. Send me an email or see 
   <ul>
     <li>Instructor: <a href="https://math.berkeley.edu/~hutching/">Michael Hutchings</a></li>
     <li><a href="https://math.berkeley.edu/~hutching/teach/54-2017/">Course Website</a></li>
-    <li><a href="math54.html">Section Website</a></li>
+    <li><a href="/math54.html">Section Website</a></li>
   </ul>
 </dd>
 </dl>
