--- a/math54.html
+++ b/math54.html
@@ -23,14 +23,11 @@ His<a href="https://math.berkeley.edu/~hutching/teach/54-2017/"> course webpage<
 Here, I will post some files and information from our discussion sections that may be useful. These include the quizzes, quiz solutions, and extra problems
 that I present in class.
 <br>
-There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza page</a> where you can ask questions.<br>
+There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza page</a> where you can ask questions.
 <br>
+
 <hr>
 
-
-
-<p>
-<hr>
 <b>How to Contact Me:</b> <br>
 Email: ejaramillo@berkeley.edu (Please include Math 54 in subject line) <br>
 Office: TBA <br>
