--- a/math54.html
+++ b/math54.html
@@ -38,7 +38,7 @@ but the room likely will once I am assigned a permanent office.
 <h3>In-Class Problems</h3>
 
 <ul>
-<li><a href="_____________">Problem Set 1</a> (Sep 1st) </li>
+<li><a href="pset1.pdf">Problem Set 1</a> (Sep 1st) </li>
 </ul>
 
 <hr>
