--- a/math54.html
+++ b/math54.html
@@ -39,6 +39,7 @@ but the room likely will once I am assigned a permanent office.
 
 <ul>
 <li><a href="pset1.pdf">Problem Set 1</a> (Sep 1st) </li>
+<li><a href="pset2.pdf">Problem Set 2</a> (Sep 6th) </li>
 </ul>
 
 <hr>
