--- a/math54.html
+++ b/math54.html
@@ -47,7 +47,7 @@ but the room likely will once I am assigned a permanent office.
 <h3>Quizzes</h3>
 
 <ul>
-<li><a href="quiz1.pdf">Quiz 1</a>, <a href="_____________">Solutions</a>  </li>
+<li><a href="quiz1.pdf">Quiz 1</a>, <a href="quiz1sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
