--- a/math54.html
+++ b/math54.html
@@ -38,8 +38,8 @@ but the room likely will once I am assigned a permanent office.
 <h3>In-Class Problems</h3>
 
 <ul>
-<li><a href="pset1.pdf">Problem Set 1</a> (Sep 1st) </li>
-<li><a href="pset2.pdf">Problem Set 2</a> (Sep 6th) </li>
+<li><a href="pset1.pdf">Problem Set 1</a> <a href="pset1sol.pdf">Solutions</a> (Sep 1st) </li>
+<li><a href="pset2.pdf">Problem Set 2</a> <a href="pset2sol.pdf">Solutions</a> (Sep 6th) </li>
 </ul>
 
 <hr>
