--- a/math54.html
+++ b/math54.html
@@ -40,6 +40,8 @@ but the room likely will once I am assigned a permanent office.
 <ul>
 <li><a href="pset1.pdf">Problem Set 1</a> <a href="pset1sol.pdf">Solutions</a> (Sep 1st) </li>
 <li><a href="pset2.pdf">Problem Set 2</a> <a href="pset2sol.pdf">Solutions</a> (Sep 6th) </li>
+<li><a href="pset3.pdf">Problem Set 3</a> <a href="">Solutions</a> (Sep 6th) </li>
+
 </ul>
 
 <hr>
