--- a/math54.html
+++ b/math54.html
@@ -50,6 +50,7 @@ but the room likely will once I am assigned a permanent office.
 
 <ul>
 <li><a href="quiz1.pdf">Quiz 1</a>, <a href="quiz1sol.pdf">Solutions</a>  </li>
+<li><a href="quiz2.pdf">Quiz 2</a>, <a href="quiz2sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
