--- a/math54.html
+++ b/math54.html
@@ -30,8 +30,7 @@ There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza 
 
 <h3>How to Contact Me:</h3>
 Email: ejaramillo@berkeley.edu (Please include Math 54 in subject line) <br>
-Office Hours: Friday 1-3pm in 779 Evans. The time and day will not change
-but the room likely will once I am assigned a permanent office.
+Office Hours: Friday 1-3pm in 779 Evans Hall.
 
 <hr>
 
