--- a/math54.html
+++ b/math54.html
@@ -41,6 +41,7 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="pset2.pdf">Problem Set 2</a> <a href="pset2sol.pdf">Solutions</a> (Sep 6th) </li>
 <li><a href="pset3.pdf">Problem Set 3</a> <a href="">Solutions</a> (Sep 8th) </li>
 <li><a href="pset4.pdf">Problem Set 4</a> <a href="">Solutions</a> (Sep 11th) </li>
+<li><a href="pset5.pdf">Problem Set 5</a> <a href="">Solutions</a> (Sep 13th) </li>
 </ul>
 
 <hr>
