--- a/math54.html
+++ b/math54.html
@@ -31,7 +31,7 @@ There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza 
 <h3>How to Contact Me:</h3>
 Email: ejaramillo@berkeley.edu (Please include Math 54 in subject line) <br>
 Office Hours: Friday 1-3pm in 779 Evans Hall. <b> Officers hours for Friday September
-  22nd have been rescheduled to Monday September 25th from 1-3pm in my office. <b>
+  22nd have been rescheduled to Monday September 25th from 1-3pm in my office. </b>
 
 <hr>
 
