--- a/math54.html
+++ b/math54.html
@@ -61,7 +61,8 @@ Office Hours: Friday 1-3pm in 779 Evans Hall. <b> Officers hours for Friday Sept
 <hr>
 
 <p>
-There is an archive of old Math 54 exams available <a href="http://math.berkeley.edu/courses/archives/exams/math-54"> here</a>. This may or may not be useful study material.
+There is an archive of old Math 54 exams available <a href="http://math.berkeley.edu/courses/archives/exams/math-54"> here</a> and
+<a href= "https://tbp.berkeley.edu/courses/math/54/"> here </a>. This may or may not be useful study material.
 </p>
 <hr>
 <a href="https://ejaramillo701.github.io/"> Back</a> to my home page.
