--- a/math54.html
+++ b/math54.html
@@ -46,7 +46,7 @@ Office Hours: Friday 1-3pm in 779 Evans Hall. <b> Officers hours for Friday Sept
 <li><a href="pset6.pdf">Problem Set 6</a> <a href="">Solutions</a> (Sep 15th) </li>
 <li><a href="pset7.pdf">Problem Set 7</a> <a href="">Solutions</a> (Sep 18th) </li>
 <li><a href="pset8.pdf">Problem Set 8</a> <a href="">Solutions</a> (Sep 20th) </li>
-<li><a href="pset9.pdf">Problem Set 9</a> <a href="">Solutions</a> (Sep 22th) </li>
+<li><a href="pset9.pdf">Problem Set 9</a> <a href="">Solutions</a> (Sep 22nd) </li>
 </ul>
 
 <hr>
