--- a/math54.html
+++ b/math54.html
@@ -30,7 +30,7 @@ There is also a course <a href="https://piazza.com/class/j6o9xc3ve0s36m">Piazza 
 
 <h3>How to Contact Me:</h3>
 Email: ejaramillo@berkeley.edu (Please include Math 54 in subject line) <br>
-Office Hours: Friday 1-3pm in 779 Evans Hall. 
+Office Hours: Friday 1-3pm in 779 Evans Hall.
 <hr>
 
 <h3>In-Class Problems</h3>
@@ -54,6 +54,8 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <ul>
 <li><a href="quiz1.pdf">Quiz 1</a>, <a href="quiz1sol.pdf">Solutions</a>  </li>
 <li><a href="quiz2.pdf">Quiz 2</a>, <a href="quiz2sol.pdf">Solutions</a>  </li>
+<li><a href="quiz3.pdf">Quiz 3</a>, <a href="quiz3sol.pdf">Solutions</a>  </li>
+<li><a href="quiz4.pdf">Quiz 4</a>, <a href="quiz4sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
