--- a/math54.html
+++ b/math54.html
@@ -45,6 +45,7 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="pset7.pdf">Problem Set 7</a> <a href="pset7sol.pdf">Solutions</a> (Sep 18th) </li>
 <li><a href="pset8.pdf">Problem Set 8</a> <a href="pset8sol.pdf">Solutions</a> (Sep 20th) </li>
 <li><a href="pset9.pdf">Problem Set 9</a> <a href="pset9sol.pdf">Solutions</a> (Sep 22nd) </li>
+<li><a href="pset10.pdf">Problem Set 10</a> <a href="pset10sol.pdf">Solutions</a> (Sep 29th) </li>
 </ul>
 
 <hr>
