--- a/math54.html
+++ b/math54.html
@@ -46,6 +46,7 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="pset8.pdf">Problem Set 8</a> <a href="pset8sol.pdf">Solutions</a> (Sep 20th) </li>
 <li><a href="pset9.pdf">Problem Set 9</a> <a href="pset9sol.pdf">Solutions</a> (Sep 22nd) </li>
 <li><a href="pset10.pdf">Problem Set 10</a> <a href="pset10sol.pdf">Solutions</a> (Sep 29th) </li>
+<li><a href="pset14.pdf">Problem Set 14</a> <a href="pset14sol.pdf">Solutions</a> (Oct 11th) </li>
 </ul>
 
 <hr>
