--- a/math54.html
+++ b/math54.html
@@ -60,6 +60,7 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="quiz2.pdf">Quiz 2</a>, <a href="quiz2sol.pdf">Solutions</a>  </li>
 <li><a href="quiz3.pdf">Quiz 3</a>, <a href="quiz3sol.pdf">Solutions</a>  </li>
 <li><a href="quiz4.pdf">Quiz 4</a>, <a href="quiz4sol.pdf">Solutions</a>  </li>
+<li><a href="quiz5.pdf">Quiz 5</a>, <a href="quiz5sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
