--- a/math54.html
+++ b/math54.html
@@ -61,6 +61,9 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="quiz3.pdf">Quiz 3</a>, <a href="quiz3sol.pdf">Solutions</a>  </li>
 <li><a href="quiz4.pdf">Quiz 4</a>, <a href="quiz4sol.pdf">Solutions</a>  </li>
 <li><a href="quiz5.pdf">Quiz 5</a>, <a href="quiz5sol.pdf">Solutions</a>  </li>
+<li><a href="quiz6.pdf">Quiz 6</a>, <a href="quiz6sol.pdf">Solutions</a>  </li>
+<li><a href="quiz7.pdf">Quiz 7</a>, <a href="quiz7sol.pdf">Solutions</a>  </li>
+<li><a href="quiz8.pdf">Quiz 8</a>, <a href="quiz8sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
