--- a/math54.html
+++ b/math54.html
@@ -64,6 +64,8 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="quiz6.pdf">Quiz 6</a>, <a href="quiz6sol.pdf">Solutions</a>  </li>
 <li><a href="quiz7.pdf">Quiz 7</a>, <a href="quiz7sol.pdf">Solutions</a>  </li>
 <li><a href="quiz8.pdf">Quiz 8</a>, <a href="quiz8sol.pdf">Solutions</a>  </li>
+<li><a href="quiz9.pdf">Quiz 9</a>, <a href="quiz9sol.pdf">Solutions</a>  </li>
+<li><a href="quiz10.pdf">Quiz 10</a>, <a href="quiz10sol.pdf">Solutions</a>  </li>
 </ul>
 
 <hr>
