--- a/math54.html
+++ b/math54.html
@@ -35,6 +35,10 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 
 <h3>In-Class Problems</h3>
 
+These problems are intended to be more challenging than most quiz or homework questions to explore deeper topics and
+provide practice with exam type questions. Towards the end of the semester, I gave fewer of these as the content on quizzes
+and homework became difficult enough to not demand the extra practice.
+
 <ul>
 <li><a href="pset1.pdf">Problem Set 1</a> <a href="pset1sol.pdf">Solutions</a> (Sep 1st) </li>
 <li><a href="pset2.pdf">Problem Set 2</a> <a href="pset2sol.pdf">Solutions</a> (Sep 6th) </li>
@@ -49,6 +53,8 @@ Office Hours: Friday 1-3pm in 779 Evans Hall.
 <li><a href="pset11.pdf">Problem Set 11</a> <a href="pset11sol.pdf">Solutions</a> (Oct 2nd) </li>
 <li><a href="pset12.pdf">Problem Set 12</a> <a href="pset12sol.pdf">Solutions</a> (Oct 9th) </li>
 <li><a href="pset13.pdf">Problem Set 13</a> <a href="pset13sol.pdf">Solutions</a> (Oct 11th) </li>
+<li><a href="pset14.pdf">Problem Set 14</a> <a href="pset14sol.pdf">Solutions</a> (Nov 3rd) </li>
+<li><a href="pset15.pdf">Problem Set 15</a> <a href="pset15sol.pdf">Solutions</a> (Nov 15th) </li>
 </ul>
 
 <hr>
