--- a/math54.html
+++ b/math54.html
@@ -77,18 +77,18 @@ and homework became difficult enough to not demand the extra practice.
 <hr>
 
 <h3>Final Exam Resources:</h3>
-I will be holding a review session: Wednesday, December 6th, 3-5pm in 740 Evans Hall. I will also
-be holding my regular office hours on Friday of that week.<br>
-<a href="math54study.pdf"> here</a> is a study guide I wrote which contains exercises on most of the material in the course, organized by topic.
+<ul>
+<li>I will be holding a review session: Wednesday, December 6th, 3-5pm in 740 Evans Hall. I will also
+be holding my regular office hours on Friday of that week.</li>
+<li><a href="math54study.pdf"> Here</a> is a study guide I wrote which contains exercises on most of the material in the course, organized by topic.
 I will not be posting solutions but most of the problems were pulled from  quizzes, problem sets, or past exams
 so it should not be difficult to find solutions after a little digging. You can also post on Piazza if you get
 stuck on any question. Note: this study guide is not exhaustive, it does not test you on every single topic so
 it should NOT be your only resource when studying. Additionally, I will not be involved in writing the exam so
-it is very possible the exam is significantly different from this worksheet. <br>
-Finally, there is an archive of old Math 54 exams available <a href="http://math.berkeley.edu/courses/archives/exams/math-54"> here</a> and
-<a href= "https://tbp.berkeley.edu/courses/math/54/"> here </a>. These may or may not be useful study material.
-
-
+it is very possible the exam is significantly different from this worksheet. </li>
+<li>Finally, there is an archive of old Math 54 exams available <a href="http://math.berkeley.edu/courses/archives/exams/math-54"> here</a> and
+<a href= "https://tbp.berkeley.edu/courses/math/54/"> here </a>. These may or may not be useful study material. </li>
+</ul>
 
 <hr>
 <a href="https://ejaramillo701.github.io/"> Back</a> to my home page.
