--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@ on problems related to algorithms, number theory, and combinatorics. Send me an 
 
 <hr>
 
-<h3>Teaching</h3>
+
+<h3>Projects</h3>
 
 <dl>
+
+<dt></dt>
+
+<h3>Teaching</h3>
+
+<ul>
+  <li><a href="lonzo_shooting_eda.html">Lonzo Ball Shooting Exploratory Data Analysis</a></li>
+</ul>
 
 <dt>Math 54, Fall 2017:</dt>
 <dd>
