--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <td>ejaramillo@berkeley.edu</td>
 </tr>
 <tr>
-<th>CV:</th>
-<td><a href="cv.pdf">PDF</a> </td>
+<th>Resume/CV:</th>
+<td><a href="resume.pdf">PDF</a> </td>
 </tr>
 </tbody></table>
 
