--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p>
 I am a fourth year undergraduate Mathematics major at UC Berkeley. My research interests are still
-being defined but at the moment I am interested in probability theory and combinatorics. In the past I have worked
+being defined but at the moment I am interested in probability theory, data science, and combinatorics. In the past I have worked
 on problems related to algorithms, number theory, and combinatorics. Send me an email or see my CV, above, for details.
 </p>
 
