--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ on problems related to algorithms, number theory, and combinatorics. Send me an 
 <h3>Projects</h3>
 
 <ul>
-  <li><a href="lonzo_shooting_EDA.html">Lonzo Ball Shooting Exploratory Data Analysis</a></li>
+  <li><a href="/lonzo.html">Lonzo Ball Shooting Exploratory Data Analysis</a></li>
 </ul>
 
 <hr>
