--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </tr>
 <tr>
 <th>Resume/CV:</th>
-<td><a href="resume.pdf">PDF</a> </td>
+<td><a href="resume.pdf">PDF</a> </td> (Last Updated: April 2018)
 </tr>
 </tbody></table>
 
