--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h3>About</h3>
 
 <p>
-I am currently a fourth year undergraduate math major at UC Berkeley. In the fall I will begin a PhD. program in math at UC Davis. My research interests are still
+I am currently a fourth year undergraduate math major at UC Berkeley. In the fall I will begin a PhD program in math at UC Davis. My research interests are still
 being defined but at the moment I am interested in probability theory, data science, and combinatorics. In the past I have worked
 on problems related to algorithms, number theory, and combinatorics. Send me an email or see my CV, above, for details.
 </p>
