--- a/index.html
+++ b/index.html
@@ -20,20 +20,16 @@
 
 <div style="margin:20px;">
 
-<div style="float:right;">
-<a ><img src="berkeleymath.jpg" style="border:1px solid black; margin:10px;" height="200px" alt="berkeleymath" align=middle/></a>
-</div>
-
 <div style="margin:20px;">
 
 <table>
   <tr>
-  <th>School:</th>
-  <td><a href="http://www.berkeley.edu/">University of California Berkeley</a></td>
+  <th>Affiliation:</th>
+  <td><a href="https://www.math.ucdavis.edu/">University of California Davis</a></td>
   </tr>
 <tr>
 <th>E-mail:</th>
-<td>ejaramillo@berkeley.edu</td>
+<td>ejaramillo@ucdavis.edu</td>
 </tr>
 <tr>
 <th>Resume/CV:</th>
@@ -51,8 +47,8 @@
 <h3>About</h3>
 
 <p>
-I am currently a fourth year undergraduate math major at UC Berkeley. In the fall I will begin a PhD program in math at UC Davis. My research interests are still
-being defined but at the moment I am interested in probability theory, data science, and combinatorics. In the past I have worked
+I am currently a first year PhD student in the pure math program at UC Davis. My research interests are still
+being defined but at the moment I am interested in algebra, data science, and combinatorics. In the past I have worked
 on problems related to algorithms, number theory, and combinatorics. Send me an email or see my CV, above, for details.
 </p>
 
@@ -72,7 +68,7 @@ on problems related to algorithms, number theory, and combinatorics. Send me an 
 
 <h3>Teaching</h3>
 
-<dt>Math 54, Fall 2017:</dt>
+<dt>Math 54 (UC Berkeley), Fall 2017:</dt>
 <dl>
 <dd>
   <ul>
