--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </tr>
 <tr>
 <th>Resume/CV:</th>
-<td><a href="cv.pdf">PDF</a> (Last Updated: April 2018) </td> 
+<td><a href="cv.pdf">PDF</a> (Last Updated: April 2018) </td>
 </tr>
 </tbody></table>
 
@@ -47,9 +47,9 @@
 <h3>About</h3>
 
 <p>
-I am currently a first year PhD student in the pure math program at UC Davis. My research interests are still
-being defined but at the moment I am interested in algebra, data science, and combinatorics. In the past I have worked
-on problems related to algorithms, number theory, and combinatorics. Send me an email or see my CV, above, for details.
+I am currently a second year PhD student in the pure math program at UC Davis. I have passed my prelimanary exams and am preparing for my Qual in order
+to advance to candidacy. My research interests lie in Mathematical Data Science, in particular I am using geometry and algebraic topology to study the
+shape of data for applications in clustering. Send me an email if you want to talk. 
 </p>
 
 <hr>
@@ -58,6 +58,7 @@ on problems related to algorithms, number theory, and combinatorics. Send me an 
 <h3>Projects</h3>
 
 <ul>
+  <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
   <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
 </ul>
 
