--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ shape of data for applications in clustering. Send me an email if you want to ta
 <hr>
 
 
-<h3>Projects</h3>
+<h3>Class/ Personal Projects</h3>
 
 <ul>
-  <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
+  <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clusterin</a></li>
   <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
 </ul>
 
