--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ shape of data for applications in clustering. Send me an email if you want to ta
 <h3>Class/ Personal Projects</h3>
 
 <ul>
-  <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clusterin</a></li>
+  <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clustering</a></li>
   <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
 </ul>
 
