--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ shape of data for applications in clustering. Send me an email if you want to ta
 <h3>Class/ Personal Projects</h3>
 
 <ul>
-  <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clustering</a></li>
-  <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a></li>
+  <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clustering</a> (Spring 2019)</li>
+  <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a> (Spring 2018)</li>
 </ul>
 
 <hr>
