--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ shape of data for applications in clustering. Send me an email if you want to ta
 
 <ul>
   <li><a href="NBAClustering.pdf">Detecting NBA Roles through Hierarchical Clustering</a> (Spring 2019)</li>
+  <li><a href="https://github.com/ejaramillo701/Simple-Neural-Network">A Simple Neural Network from Scratch</a> (Spring 2019)</li>
   <li><a href="https://github.com/ejaramillo701/Basketball-Data-Analytics">NBA Data Analysis</a> (Spring 2018)</li>
 </ul>
 
