--- a/index.html
+++ b/index.html
@@ -83,9 +83,14 @@ shape of data for applications in clustering. Send me an email if you want to ta
 
 <hr>
 
-<h3>Links</h3>
+<h3>Undergraduate Research/ Publications</h3>
 <ul>
-<li><a href="https://musa.berkeley.edu/">MUSA</a> (Math Undergraduate Student Association)</li>
+<li><bold>Primes and Perfect Powers in the Catalan Triangle</bold>
+with N. Benjamin, G. Fickes, E. Fiorini, E. Jovinelly, and T.W.H. Wong;
+Journal of Integer Sequences Vol. 22 (2019), Issue 6, Paper 7<a href="https://cs.uwaterloo.ca/journals/JIS/VOL22/Fiorini/fiorini3.pdf">pdf</a></li>
+<li><bold>SEAR: A Polynomial-Time MRPP Algorithm with Expected Constant-Factor Optimality Guarantee</bold>
+with S.D. Han and J. Yu;
+Conference Paper: 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems<a href="https://arxiv.org/pdf/1709.08215.pdf">pdf</a></li>
 </ul>
 
 <hr>
