--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Edgar Jaramillo Rodriguez</title>
+<title>Edgar Jaramillo Rodriguez</title> (Pronouns: They/Them)
 <link rel="shortcut icon" href="http://dimacs.rutgers.edu/favicon.ico" type="image/x-icon">
 <style type="text/css">
    dt { font-weight:bold; }
@@ -85,10 +85,10 @@ shape of data for applications in clustering. Send me an email if you want to ta
 
 <h3>Undergraduate Research/ Publications</h3>
 <ul>
-<li><bold>Primes and Perfect Powers in the Catalan Triangle</bold>
+<li><b>Primes and Perfect Powers in the Catalan Triangle</b>
 with N. Benjamin, G. Fickes, E. Fiorini, E. Jovinelly, and T.W.H. Wong;
 Journal of Integer Sequences Vol. 22 (2019), Issue 6, Paper 7<a href="https://cs.uwaterloo.ca/journals/JIS/VOL22/Fiorini/fiorini3.pdf">pdf</a></li>
-<li><bold>SEAR: A Polynomial-Time MRPP Algorithm with Expected Constant-Factor Optimality Guarantee</bold>
+<li><b>SEAR: A Polynomial-Time MRPP Algorithm with Expected Constant-Factor Optimality Guarantee</b>
 with S.D. Han and J. Yu;
 Conference Paper: 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems<a href="https://arxiv.org/pdf/1709.08215.pdf">pdf</a></li>
 </ul>
