--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ shape of data for applications in clustering. Send me an email if you want to ta
 
 <h3>Undergraduate Research/ Publications</h3>
 <ul>
-<li><b>Primes and Perfect Powers in the Catalan Triangle</b>
+<li><em>Primes and Perfect Powers in the Catalan Triangle</em>
 with N. Benjamin, G. Fickes, E. Fiorini, E. Jovinelly, and T.W.H. Wong;
 Journal of Integer Sequences Vol. 22 (2019), Issue 6, Paper 7<a href="https://cs.uwaterloo.ca/journals/JIS/VOL22/Fiorini/fiorini3.pdf"> pdf</a></li>
-<li><b>SEAR: A Polynomial-Time MRPP Algorithm with Expected Constant-Factor Optimality Guarantee</b>
+<li><em>SEAR: A Polynomial-Time MRPP Algorithm with Expected Constant-Factor Optimality Guarantee</em>
 with S.D. Han and J. Yu;
 Conference Paper: 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems<a href="https://arxiv.org/pdf/1709.08215.pdf"> pdf</a></li>
 </ul>
