--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Edgar Jaramillo Rodriguez</title> (Pronouns: They/Them)
+<title>Edgar Jaramillo Rodriguez</title>
 <link rel="shortcut icon" href="http://dimacs.rutgers.edu/favicon.ico" type="image/x-icon">
 <style type="text/css">
    dt { font-weight:bold; }
